@@ -8,7 +8,7 @@
  *   pqxx::result represents the set of result tuples from a database query
  *   DO NOT INCLUDE THIS FILE DIRECTLY; include pqxx/result instead.
  *
- * Copyright (c) 2001-2011, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2012, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -127,7 +127,7 @@ public:
 
   const tuple operator[](size_type i) const throw ()			//[t2]
 	{ return tuple(this, i); }
-  const tuple at(size_type) const throw (range_error);			//[t10]
+  const tuple at(size_type) const;					//[t10]
 
   void clear() throw () { super::reset(); m_data = 0; }			//[t20]
 
